fix: Add nowrap for switch and bulk select

--- a/src/App.scss
+++ b/src/App.scss
@@ -77,6 +77,11 @@ button.pf-c-button.pf-m-tertiary {
   --pf-c-switch--ColumnGap: 0;
 }
 
+.pf-c-switch,
+.ins-c-bulk-select {
+  white-space: nowrap;
+}
+
 .ins-c-warning-text {
     color: var(--pf-global--warning-color--200);
 }
@@ -85,7 +90,7 @@ button.pf-c-button.pf-m-tertiary {
   font-size: var(--pf-c-content--h2--FontSize);
   font-weight: normal;
 }
-    
+
 .ins-u-passed {
   color: var(--pf-global--success-color--200);
 }
